--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "cmdk": "1.0.4",
     "crypto": "latest",
     "date-fns": "latest",
+    "dotenv": "^17.2.2",
     "embla-carousel-react": "8.5.1",
     "gcp-metadata": "latest",
     "geist": "latest",
@@ -64,6 +65,7 @@
     "lucide-react": "^0.454.0",
     "mongodb": "latest",
     "mongodb-client-encryption": "latest",
+    "mongoose": "^8.18.2",
     "next": "15.2.4",
     "next-auth": "latest",
     "next-themes": "^0.4.6",
