feat: webscafolding module

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-dom": "^19",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
+    "readline": "^1.3.0",
     "recharts": "2.15.4",
     "snappy": "latest",
     "socks": "latest",
